# Rust-project

back-end/: Cargo.toml
back-end/src/: main.rs
back-end/src/api/: user_api.rs
back-end/src/models/: user_model.rs
back-end/src/repository/: mongodb_repo.rs
front-end/: package-lock.json  package.json
front-end/src/: App.tsx
front-end/src/page/: AuthSide.tsx  Landing.tsx
