[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-cors = "0.5.0"
serde = "1.0.136"
dotenv = "0.15.0"
futures = "0.3"
bcrypt = "0.8.1"


[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]
